--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         </div>
     </div>
 
+    <!--
+    <button onclick=showName()>전광판 버튼</button>
+    <h1 class='name'></h1>
+    !-->
+
     <script src="index.js"></script>
 </body>
 </html>
